fixed feature weighting and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ th {
 	position: fixed;
 	right: 1.2em;
 	top: 1.2em;
-	width: 30%;
+	width: 20%;
 	height: 35em;
 	border: solid 2px black;
 	background-color: rgba(4, 156, 219, 0.25);
@@ -405,7 +405,7 @@ th {
 }
 
 .chat-input input {
-	width: 75%;
+	width: 65%;
 	height: 80%;
 }
 
@@ -428,24 +428,24 @@ th {
 /* Project */ 
 
 
-
-
-#project-box h4 {
-	font-size: 1.8em;
+.accordian {
+	width: 55%;
 }
 
-.main-tasks {
-	list-style: none;
+.accordian-group {
+	text-align: center;
+
 }
 
-h5 {
-	font-size: 1.8em;
-	color: #9d261d;
+#h5-project {
+	font-size: 2.0em;
+	font-weight: 1400;
+	color: rgba(235, 52, 52, 1);
 	padding-top: 1.04em;
 }
 
 .sub-task {
-	font-size: 1.2em;
+	font-size: 1.5em;
 	padding-top: 1.02em;
 }
 
@@ -454,13 +454,14 @@ h5 {
 .goal-box {
 	position: relative;
 	top: 0.6em;
-	left: 4.0em;
+	left: 1.0em;
+	width: 20%;
 }
 
 .goal-box h5 {
 	color: #9d261d;
 	margin-top: 0px;
-	font-size: 1.8em;
+	font-size: 1.4em;
 	padding-top: 1.04em;
 }
 
@@ -469,8 +470,14 @@ h5 {
 }
 
 .goals {
-	font-size: 1.2em;
+	font-size: 1.05em;
 	padding-top: 1.02em;
+}
+
+#h5-goal {
+	font-size: 2.0em;
+	color: #049cdb;
+	padding-top: 1.04em;
 }
 
 /* Highlight */ 
